[package]
name = "util"
version = "0.1.0"
authors = ["Young Zhang <young.quinn.zhang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"

[dev-dependencies]
tokio-test = "0.4.4"
pretty_env_logger = "0.5.0"
