[package]
name = "util_test"
version = "0.1.0"
authors = ["Young Zhang <young.quinn.zhang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1.20.1", features = ["full", "fs"] }
tokio-test = "0.4.2"
util = { path = "../util" }
